--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test": "node --trace-warnings jest"
+    "test": "npx jest"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.0",
