--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "yup": "^1.1.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
@@ -29,6 +31,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "jest": "^29.5.0",
+    "jsdom": "^22.0.0",
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.2",
     "vite": "^4.3.2",
