--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-i18next": "^12.3.1",
+    "react-switch": "^7.0.0",
     "yup": "^1.1.1"
   },
   "devDependencies": {
